# Copyright (c) 2024 ROS2 OpenHarmony Port Project
# action_msgs - ROS2 action message types

import("//build/ohos.gni")
import("//gn_templates/ros2_library.gni")

_package_name = "action_msgs"

# ============================================================================
# action_msgs message types:
#
# Goal Management:
#   GoalInfo - Goal identifier and timestamp
#   GoalStatus - Status of a single goal
#   GoalStatusArray - Array of goal statuses
#
# Services:
#   CancelGoal - Cancel one or more goals
# ============================================================================

# ============================================================================
# action_msgs C generator library
# ============================================================================
ros2_shared_library("action_msgs__rosidl_generator_c") {
  sources = [
    # Message types
    "src/msg/goal_info__functions.c",
    "src/msg/goal_status__functions.c",
    "src/msg/goal_status_array__functions.c",

    # Service types - Request/Response
    "src/srv/cancel_goal__request__functions.c",
    "src/srv/cancel_goal__response__functions.c",
  ]

  include_dirs = [ "include" ]

  deps = [
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_generator_c",
  ]

  defines = [ "ROSIDL_GENERATOR_C_BUILDING_DLL_${_package_name}" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# action_msgs type support C library
# ============================================================================
ros2_shared_library("action_msgs__rosidl_typesupport_c") {
  sources = [
    # Message types
    "src/msg/goal_info__type_support.c",
    "src/msg/goal_status__type_support.c",
    "src/msg/goal_status_array__type_support.c",

    # Service types - Request/Response
    "src/srv/cancel_goal__request__type_support.c",
    "src/srv/cancel_goal__response__type_support.c",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":action_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_c:rosidl_typesupport_c",
    "//foundation/rosidl/rosidl_typesupport_introspection_c:rosidl_typesupport_introspection_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_C_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# action_msgs FastRTPS type support
# ============================================================================
ros2_shared_library("action_msgs__rosidl_typesupport_fastrtps_c") {
  sources = [
    "src/msg/goal_info__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/goal_status__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/goal_status_array__rosidl_typesupport_fastrtps_c.cpp",
    "src/srv/cancel_goal__request__rosidl_typesupport_fastrtps_c.cpp",
    "src/srv/cancel_goal__response__rosidl_typesupport_fastrtps_c.cpp",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":action_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_fastrtps_c:rosidl_typesupport_fastrtps_c",
    "//vendor/fastdds/fastcdr:fastcdr",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_fastrtps_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_FASTRTPS_C_BUILDING_DLL_${_package_name}" ]

  cflags_cc = [ "-Wno-unused-parameter" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# action_msgs C++ type support
# ============================================================================
config("action_msgs_cpp_config") {
  include_dirs = [ "include" ]
}

ros2_shared_library("action_msgs__rosidl_typesupport_cpp") {
  sources = [
    "src/msg/goal_info__type_support.cpp",
    "src/msg/goal_status__type_support.cpp",
    "src/msg/goal_status_array__type_support.cpp",
    "src/srv/cancel_goal__request__type_support.cpp",
    "src/srv/cancel_goal__response__type_support.cpp",
  ]

  include_dirs = [ "include" ]

  deps = [
    ":action_msgs__rosidl_generator_c",
    "//foundation/rosidl/rosidl_runtime_cpp:rosidl_runtime_cpp",
    "//foundation/rosidl/rosidl_typesupport_cpp:rosidl_typesupport_cpp",
    "//foundation/rosidl/rosidl_typesupport_introspection_cpp:rosidl_typesupport_introspection_cpp",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_cpp",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_CPP_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# Package group target
# ============================================================================
group("action_msgs") {
  public_deps = [
    ":action_msgs__rosidl_generator_c",
    ":action_msgs__rosidl_typesupport_c",
    ":action_msgs__rosidl_typesupport_cpp",
    ":action_msgs__rosidl_typesupport_fastrtps_c",
  ]

  public_configs = [ ":action_msgs_cpp_config" ]
}
