# Copyright (c) 2024 ROS2 OpenHarmony Port Project
# geometry_msgs - ROS2 geometric message types

import("//build/ohos.gni")
import("//gn_templates/ros2_library.gni")

_package_name = "geometry_msgs"

# ============================================================================
# geometry_msgs message types:
#
# Basic types:
#   Point, Point32, Vector3, Quaternion
#
# Compound types:
#   Pose, Pose2D, PoseWithCovariance, Transform, Twist, TwistWithCovariance,
#   Wrench, Accel, AccelWithCovariance, Inertia, Polygon
#
# Stamped types:
#   PointStamped, Vector3Stamped, QuaternionStamped, PoseStamped,
#   PoseWithCovarianceStamped, PoseArray, TransformStamped, TwistStamped,
#   TwistWithCovarianceStamped, WrenchStamped, AccelStamped,
#   AccelWithCovarianceStamped, InertiaStamped, PolygonStamped, VelocityStamped
# ============================================================================

# ============================================================================
# geometry_msgs C generator library
# ============================================================================
ros2_shared_library("geometry_msgs__rosidl_generator_c") {
  sources = [
    # Basic types
    "src/msg/point__functions.c",
    "src/msg/point32__functions.c",
    "src/msg/vector3__functions.c",
    "src/msg/quaternion__functions.c",

    # Compound types
    "src/msg/pose__functions.c",
    "src/msg/pose2d__functions.c",
    "src/msg/pose_with_covariance__functions.c",
    "src/msg/transform__functions.c",
    "src/msg/twist__functions.c",
    "src/msg/twist_with_covariance__functions.c",
    "src/msg/wrench__functions.c",
    "src/msg/accel__functions.c",
    "src/msg/accel_with_covariance__functions.c",
    "src/msg/inertia__functions.c",
    "src/msg/polygon__functions.c",

    # Stamped types
    "src/msg/point_stamped__functions.c",
    "src/msg/vector3_stamped__functions.c",
    "src/msg/quaternion_stamped__functions.c",
    "src/msg/pose_stamped__functions.c",
    "src/msg/pose_with_covariance_stamped__functions.c",
    "src/msg/pose_array__functions.c",
    "src/msg/transform_stamped__functions.c",
    "src/msg/twist_stamped__functions.c",
    "src/msg/twist_with_covariance_stamped__functions.c",
    "src/msg/wrench_stamped__functions.c",
    "src/msg/accel_stamped__functions.c",
    "src/msg/accel_with_covariance_stamped__functions.c",
    "src/msg/inertia_stamped__functions.c",
    "src/msg/polygon_stamped__functions.c",
    "src/msg/velocity_stamped__functions.c",
  ]

  include_dirs = [
    "include",
  ]

  deps = [
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_generator_c",
    "//interfaces/std_msgs:std_msgs__rosidl_generator_c",
  ]

  defines = [ "ROSIDL_GENERATOR_C_BUILDING_DLL_${_package_name}" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# geometry_msgs type support C library
# ============================================================================
ros2_shared_library("geometry_msgs__rosidl_typesupport_c") {
  sources = [
    # Basic types
    "src/msg/point__type_support.c",
    "src/msg/point32__type_support.c",
    "src/msg/vector3__type_support.c",
    "src/msg/quaternion__type_support.c",

    # Compound types
    "src/msg/pose__type_support.c",
    "src/msg/pose2d__type_support.c",
    "src/msg/pose_with_covariance__type_support.c",
    "src/msg/transform__type_support.c",
    "src/msg/twist__type_support.c",
    "src/msg/twist_with_covariance__type_support.c",
    "src/msg/wrench__type_support.c",
    "src/msg/accel__type_support.c",
    "src/msg/accel_with_covariance__type_support.c",
    "src/msg/inertia__type_support.c",
    "src/msg/polygon__type_support.c",

    # Stamped types
    "src/msg/point_stamped__type_support.c",
    "src/msg/vector3_stamped__type_support.c",
    "src/msg/quaternion_stamped__type_support.c",
    "src/msg/pose_stamped__type_support.c",
    "src/msg/pose_with_covariance_stamped__type_support.c",
    "src/msg/pose_array__type_support.c",
    "src/msg/transform_stamped__type_support.c",
    "src/msg/twist_stamped__type_support.c",
    "src/msg/twist_with_covariance_stamped__type_support.c",
    "src/msg/wrench_stamped__type_support.c",
    "src/msg/accel_stamped__type_support.c",
    "src/msg/accel_with_covariance_stamped__type_support.c",
    "src/msg/inertia_stamped__type_support.c",
    "src/msg/polygon_stamped__type_support.c",
    "src/msg/velocity_stamped__type_support.c",
  ]

  include_dirs = [
    "include",
  ]

  deps = [
    ":geometry_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_c:rosidl_typesupport_c",
    "//foundation/rosidl/rosidl_typesupport_introspection_c:rosidl_typesupport_introspection_c",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_c",
    "//interfaces/std_msgs:std_msgs__rosidl_typesupport_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_C_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# geometry_msgs FastRTPS type support
# ============================================================================
ros2_shared_library("geometry_msgs__rosidl_typesupport_fastrtps_c") {
  sources = [
    # Key geometry types for FastRTPS serialization
    "src/msg/point__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/vector3__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/quaternion__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/pose__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/pose_stamped__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/transform__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/transform_stamped__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/twist__rosidl_typesupport_fastrtps_c.cpp",
    "src/msg/twist_stamped__rosidl_typesupport_fastrtps_c.cpp",
  ]

  include_dirs = [
    "include",
  ]

  deps = [
    ":geometry_msgs__rosidl_generator_c",
    "//foundation/rcutils:rcutils",
    "//foundation/rosidl/rosidl_runtime_c:rosidl_runtime_c",
    "//foundation/rosidl/rosidl_typesupport_fastrtps_c:rosidl_typesupport_fastrtps_c",
    "//vendor/fastdds/fastcdr:fastcdr",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_fastrtps_c",
    "//interfaces/std_msgs:std_msgs__rosidl_typesupport_fastrtps_c",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_FASTRTPS_C_BUILDING_DLL_${_package_name}" ]

  cflags_cc = [ "-Wno-unused-parameter" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# geometry_msgs C++ type support
# ============================================================================
config("geometry_msgs_cpp_config") {
  include_dirs = [ "include" ]
}

ros2_shared_library("geometry_msgs__rosidl_typesupport_cpp") {
  sources = [
    "src/msg/point__type_support.cpp",
    "src/msg/vector3__type_support.cpp",
    "src/msg/quaternion__type_support.cpp",
    "src/msg/pose__type_support.cpp",
    "src/msg/pose_stamped__type_support.cpp",
    "src/msg/transform__type_support.cpp",
    "src/msg/transform_stamped__type_support.cpp",
    "src/msg/twist__type_support.cpp",
    "src/msg/twist_stamped__type_support.cpp",
  ]

  include_dirs = [
    "include",
  ]

  deps = [
    ":geometry_msgs__rosidl_generator_c",
    "//foundation/rosidl/rosidl_runtime_cpp:rosidl_runtime_cpp",
    "//foundation/rosidl/rosidl_typesupport_cpp:rosidl_typesupport_cpp",
    "//foundation/rosidl/rosidl_typesupport_introspection_cpp:rosidl_typesupport_introspection_cpp",
    "//interfaces/builtin_interfaces:builtin_interfaces__rosidl_typesupport_cpp",
    "//interfaces/std_msgs:std_msgs__rosidl_typesupport_cpp",
  ]

  defines = [ "ROSIDL_TYPESUPPORT_CPP_BUILDING_DLL" ]

  part_name = "ros2_foundation"
  subsystem_name = "ros2"
}

# ============================================================================
# Package group target
# ============================================================================
group("geometry_msgs") {
  public_deps = [
    ":geometry_msgs__rosidl_generator_c",
    ":geometry_msgs__rosidl_typesupport_c",
    ":geometry_msgs__rosidl_typesupport_cpp",
    ":geometry_msgs__rosidl_typesupport_fastrtps_c",
  ]

  public_configs = [ ":geometry_msgs_cpp_config" ]
}
